@@ -6,9 +6,8 @@ import java.awt.Graphics2D;
 import java.awt.event.KeyEvent;
 import java.awt.geom.Rectangle2D;
 import java.awt.image.BufferedImage;
-import java.util.Collection;
+import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import com.snapgames.core.App;
 import com.snapgames.core.entity.*;
@@ -19,7 +18,9 @@ import com.snapgames.core.physic.PhysicEngine;
 import com.snapgames.core.physic.Vector2D;
 import com.snapgames.core.physic.World;
 import com.snapgames.core.scene.AbstractScene;
+import com.snapgames.core.service.ServiceManager;
 import com.snapgames.core.utils.ResourceManager;
+import com.snapgames.demo.test001.behaviors.EnemyCollisionResponse;
 import com.snapgames.demo.test001.behaviors.EnemyTrackingBehavior;
 import com.snapgames.demo.test001.io.DemoInputListener;
 
@@ -44,31 +45,32 @@ public class DemoScene extends AbstractScene {
 
     @Override
     public void load() {
-        BufferedImage tiles = (BufferedImage) ResourceManager.add("/images/tiles01.png");
+        BufferedImage tiles = ResourceManager.add("/images/tiles01.png");
+        assert tiles != null;
         heart = tiles.getSubimage(0, 6 * 16, 16, 16);
 
-        Font textFont = (Font) ResourceManager.add("/fonts/tino/Tinos for Powerline.ttf");
+        Font textFont = ResourceManager.add("/fonts/tino/Tinos for Powerline.ttf");
+        assert textFont != null;
         scoreFont = textFont.deriveFont(Font.BOLD, 22.0f);
     }
 
     @Override
     public void create(App app) {
-        PhysicEngine physicEngine = app.getPhysicEngine();
-        Renderer renderer = app.getRenderer();
+        setWorld(new World(app.getConfiguration().gravity, app.getConfiguration().playArea));
+        Rectangle2D playArea = getWorld().getPlayArea();
 
-        setWorld(new World(app.getConfiguration().gravity,app.getConfiguration().playArea));
-        Rectangle2D playArea = physicEngine.getWorld().getPlayArea();
         score = 0;
         lives = 2;
 
-        GameObject player = (GameObject) new GameObject("player")
+        GameObject player = new GameObject("player")
                 .setColor(Color.GREEN.darker())
                 .setFillColor(Color.GREEN)
                 .setPosition(playArea.getWidth() * 0.5, playArea.getHeight() * 0.5)
                 .setSize(16, 16)
+                .setEntityType(EntityType.ELLIPSE)
                 .setPriority(1)
                 .setMass(1.0)
-                .setMaterial(new Material("body", 1.2, 0.78, 0.97))
+                .setMaterial(new Material("body", 1.2, 0.78, 0.01))
                 .addAttribute("speed", 5.0)
                 .addAttribute("energy", maxEnergy)
                 .addAttribute("mana", maxMana)
@@ -84,6 +86,17 @@ public class DemoScene extends AbstractScene {
                 .setTweenFactor(0.02);
         addEntity(cam01);
 
+
+        // create HUD
+        createHUD();
+
+
+        // set the Keys handling listener for this demo.
+        app.getInputHandler().add(new DemoInputListener(this));
+    }
+
+    private void createHUD() {
+        Renderer renderer = ServiceManager.get().find(Renderer.class);
         TextObject textScore = new TextObject("score")
                 .setPosition(new Vector2D(renderer.getScreenBuffer().getWidth() - 10, 20))
                 .withValue(score)
@@ -97,19 +110,6 @@ public class DemoScene extends AbstractScene {
                 .stickToCamera(true)
                 .setPriority(1);
         addEntity(textScore);
-
-        TextObject textGameOver = new TextObject("gameOver")
-                .setPosition(new Vector2D(renderer.getScreenBuffer().getWidth() * 0.5, renderer.getScreenBuffer().getHeight() * 0.5))
-                .withText(App.messages.getString("app.message.game.over"))
-                .withFont(scoreFont)
-                .withTextColor(Color.WHITE)
-                .withTextAlign(TextAlign.CENTER)
-                .withShadowColor(shadowColor)
-                .stickToCamera(true)
-                .setActive(false)
-                .setPriority(1)
-                .withBorderWidth(2);
-        addEntity(textGameOver);
 
         GameObject imgHeart = new GameObject("heart")
                 .setPosition(new Vector2D(16, 10))
@@ -157,13 +157,25 @@ public class DemoScene extends AbstractScene {
                 .withCurrentValue(mana);
         addEntity(gaugeMana);
 
-        app.getInputHandler().add(new DemoInputListener(this));
+        // prepare a "Game Over" text element as pre-deactivated one.
+        TextObject textGameOver = new TextObject("gameOver")
+                .setPosition(new Vector2D(renderer.getScreenBuffer().getWidth() * 0.5, renderer.getScreenBuffer().getHeight() * 0.5))
+                .withText(App.messages.getString("app.message.game.over"))
+                .withFont(scoreFont)
+                .withTextColor(Color.WHITE)
+                .withTextAlign(TextAlign.CENTER)
+                .withShadowColor(shadowColor)
+                .stickToCamera(true)
+                .setActive(false)
+                .setPriority(1)
+                .withBorderWidth(2);
+        addEntity(textGameOver);
     }
 
 
     public void addEnemies(String entityRootName, int nbEnemies, double maxMass) {
         Rectangle2D playArea = app.getPhysicEngine().getWorld().getPlayArea();
-        Material enemyMat = new Material(entityRootName + "_material", 0.5, 0.8, 1.0);
+        Material enemyMat = new Material(entityRootName + "_material", 0.5, 0.8, 0.005);
         for (int i = 0; i < nbEnemies; i++) {
             GameObject enemy = new GameObject(entityRootName + "_" + Entity.getIndex())
                     .setEntityType(EntityType.ELLIPSE)
@@ -174,7 +186,8 @@ public class DemoScene extends AbstractScene {
                     .setPriority(i + 10)
                     .setMass(Math.random() * maxMass)
                     .setMaterial(enemyMat)
-                    .addBehavior(new EnemyTrackingBehavior(40.0, 0.15));
+                    .addBehavior(new EnemyTrackingBehavior(40.0, 0.15))
+                    .addBehavior(new EnemyCollisionResponse());
 
             addEntity(enemy);
         }
@@ -188,9 +201,9 @@ public class DemoScene extends AbstractScene {
     @Override
     public void input(App app, InputHandler ih) {
         if (!levelEnd) {
-            Entity player = getEntity("player");
+            Entity<?> player = getEntity("player");
 
-            double speed = (double) player.getAttribute("speed", 0.5);
+            double speed = player.getAttribute("speed", 0.5);
             if (ih.isControlKeyPressed()) {
                 speed *= 4.0;
             }
@@ -211,7 +224,7 @@ public class DemoScene extends AbstractScene {
     }
 
     public void removeAllEntity(String enemy) {
-        Collection<Entity> tobeDeleted = app.getSceneManager().getCurrent().getEntities().stream().filter(e -> e.getName().contains(enemy)).collect(Collectors.toList());
+        List<Entity> tobeDeleted = app.getSceneManager().getCurrent().getEntities().stream().filter(e -> e.getName().contains(enemy)).toList();
         app.getSceneManager().getCurrent().getEntities().removeAll(tobeDeleted);
     }
 
@@ -233,6 +246,7 @@ public class DemoScene extends AbstractScene {
                 getEntity("player").addAttribute("energy", maxEnergy);
             } else {
                 levelEnd = true;
+                app.setPause(true);
                 getEntity("player").setFillColor(Color.RED);
             }
         }
@@ -246,10 +260,11 @@ public class DemoScene extends AbstractScene {
 
     @Override
     public void render(App app, Graphics2D g, Renderer r, Map<String, Object> stats) {
+        super.render(app, g, r, stats);
         // render HUD
         Font pauseFont = g.getFont().deriveFont(Font.BOLD, 16.0f);
         // draw "paused" message if required
-        if (app.isPaused()) {
+        if (app.isPaused() && !levelEnd) {
             g.setColor(new Color(0.1f, 0.3f, 0.6f, 0.6f));
             g.fillRect(0, (int) ((r.screenBuffer.getHeight() - 6) * 0.5), r.screenBuffer.getWidth(), 20);
             String pauseText = App.messages.getString("game.pause.text");
